kubernetes/blueDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lennart
  name: blue-deployment # name of the deployment
spec: # rules for the deployment
  replicas: 3
  selector:
    matchLabels: #selecs only pods with the following labels, this should match the selector in the corresponding service
      app: dryagerapi
      env: blue
  template: #template for the pods in this deployment
    metadata:
      labels: #all the pods in this deployment will have the following labels
        app: dryagerapi
        env: blue
    spec:
      containers:
        - name: dryagerapi
          image: lnart/dryager-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3032
          command: ["/bin/sh", "-c"]
          args:
            - |
              ls
              npm start
