kubernetes/greenDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lennart
  name: green-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dryagerapi
      env: green
  template:
    metadata:
      labels:
        app: dryagerapi
        env: green
    spec:
      containers:
        - name: dryagerapi
          image: lnart/dryager-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3033
