kubernetes/greenService.yml
apiVersion: v1
kind: Service
metadata:
  namespace: lennart
  name: green-service
  labels:
    service: green-service
spec:
  ports:
    - port: 8005
      name: green-api
      targetPort: 3033
  selector:
    app: dryagerapi
    env: green
