kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-ingress
  namespace: lennart
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - api.dryager.lennartpafel.com
      secretName: tls-dryagerapi
  rules:
    - host: api.dryager.lennartpafel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: green-service
                port:
                  name: green-api
    - host: staging.api.dryager.lennartpafel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blue-service
                port:
                  name: blue-api
